--- a/pages/index/index.wxss
+++ b/pages/index/index.wxss
@@ -1,20 +1,7 @@
-.userinfo {
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-}
-
-.userinfo-avatar {
-  width: 128rpx;
-  height: 128rpx;
-  margin: 20rpx;
-  border-radius: 50%;
-}
-
-.userinfo-nickname {
+.options-display {
   color: #aaa;
 }
 
-.usermotto {
-  margin-top: 200px;
+.options-text {
+  color: #aaa;
 }
